<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scannedData"
        android:textSize="20sp"
        android:text="@string/initial_message"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/startButton"
            android:text="@string/btn_start"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/white"
            android:id="@+id/sendButton"
            android:text="@string/btn_send"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>



</LinearLayout>